--- a/Source/CriticalPath.Web/Views/Shared/_BaseLayout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_BaseLayout.cshtml
@@ -47,6 +47,8 @@
 <body>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/libs/jsPDF/jspdf.min.js"></script>
+    <script src="~/libs/html2canvas/html2canvas.min.js"></script>
     @RenderSection("scripts", required: false)
     @RenderBody()
     @Html.Hidden("decimalSample", 1.1m)
