New username issue fixed on Employees/Create, added Employees/ResetPassword action

--- a/Source/CriticalPath.Web/Areas/Admin/Views/Employees/Index.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Employees/Index.cshtml
@@ -68,6 +68,7 @@
                 @if (canUserEdit)
                 {
                     @:'<li><a href="@Url.Action("Edit")/' + params.value + '">@ActionStrings.Edit</a></li>' +
+                    @:'<li><a href="@Url.Action("ResetPassword")/' + params.value + '">Reset Password</a></li>' +
                     @:'<li><a href="@(Url.Action("Edit", "Users"))?userName=' + encodeURI(params.data.UserName) + '">@EntityStrings.EditAspNetUser</a></li>' +
                 }
                 @if(canUserDelete)
