--- a/Source/CriticalPath.Web/Views/POImages/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/POImages/Edit.cshtml
@@ -52,10 +52,11 @@
 @section Scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/angular")
-    <script src="~/libs/jquery.fileupload.js"></script>
-    <script src="~/Scripts/App/fileUpload.js"></script>
-    <script>
-        fileUpload.imageOnly = true;
-    </script>
+    <script src="~/libs/JavaScript-Load-Image/js/load-image.all.min.js"></script>
+    <script src="~/libs/JavaScript-Canvas-to-Blob/js/canvas-to-blob.min.js"></script>
+    <script src="~/libs/jQuery-File-Upload/js/jquery.iframe-transport.js"></script>
+    <script src="~/libs/jQuery-File-Upload/js/jquery.fileupload.min.js"></script>
+    <script src="~/libs/jQuery-File-Upload/js/jquery.fileupload-process.min.js"></script>
+    <script src="~/libs/jQuery-File-Upload/js/jquery.fileupload-image.min.js"></script>
+    <script src="~/libs/jQuery-File-Upload/js/jquery.fileupload-validate.min.js"></script>
 }
