--- a/Source/CriticalPath.Web/Views/POImages/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/POImages/Create.cshtml
@@ -61,7 +61,7 @@
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/libs/JavaScript-Load-Image/js/load-image.all.min.js"></script>
     <script src="~/libs/JavaScript-Canvas-to-Blob/js/canvas-to-blob.min.js"></script>
-    <script src="~/libs/jQuery-File-Upload/js/jquery.iframe-transport.js"></script>
+    <script src="~/libs/jQuery-File-Upload/js/jquery.iframe-transport.min.js"></script>
     <script src="~/libs/jQuery-File-Upload/js/jquery.fileupload.min.js"></script>
     <script src="~/libs/jQuery-File-Upload/js/jquery.fileupload-process.min.js"></script>
     <script src="~/libs/jQuery-File-Upload/js/jquery.fileupload-image.min.js"></script>
