--- a/Source/CriticalPath.Web/Views/Shared/_PagerPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_PagerPartial.cshtml
@@ -7,6 +7,7 @@
     int totalCount = ViewBag.totalCount;
     int pageSize = ViewBag.pageSize;
     int pageCount = ViewBag.pageCount;
+    int listedCount = page < pageCount ? pageSize : totalCount - ((page - 1) * pageSize);
     int pagers = pageCount > 10 ? 10 : pageCount;
     int pagerStart = page > 5 ? page - (pagers / 2) : 1;
     if ((pagerStart + pagers) > pageCount)
@@ -14,14 +15,17 @@
         pagerStart = pageCount - pagers + 1;
     }
 }
-@if (pageCount > 1)
-{
-    <nav class="hidden-print">
-        <ul class="pagination">
-            @if (page == 1)
+<nav>
+    <ul class="pagination">
+        <li class="active">
+            <span id="recordsStats" style="margin:0 0 0 2px;min-width:92px;text-align:center;">@listedCount / @totalCount</span>
+        </li>
+        @if (pageCount > 1)
+        {
+            if (page == 1)
             {
                 <li class="disabled">
-                    <a aria-label="FirstPage">
+                    <a aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
@@ -34,17 +38,17 @@
             else
             {
                 <li>
-                    <a href="#" aria-label="FirstPage" onclick="getPagedData(1)">
+                    <a href="javascript:;" aria-label="FirstPage" onclick="getPagedData(1)">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#" aria-label="Previous" onclick="getPagedData(@(page - 1))">
+                    <a href="javascript:;" aria-label="Previous" onclick="getPagedData(@(page - 1))">
                         <span aria-hidden="true">&lsaquo;</span>
                     </a>
                 </li>
             }
-            @for (int i = pagerStart; i < (pagerStart + pagers); i++)
+            for (int i = pagerStart; i < (pagerStart + pagers); i++)
             {
                 if (page == i)
                 {
@@ -52,18 +56,18 @@
                 }
                 else
                 {
-                    <li><a href="#" onclick="getPagedData(@i)">@i</a></li>
+                    <li><a href="javascript:;" onclick="getPagedData(@i)">@i</a></li>
                 }
             }
-            @if (page < pageCount)
+            if (page < pageCount)
             {
                 <li>
-                    <a href="#" aria-label="Next" onclick="getPagedData(@(page + 1))">
+                    <a href="javascript:;" aria-label="Next" onclick="getPagedData(@(page + 1))">
                         <span aria-hidden="true">&rsaquo;</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#" aria-label="LastPage" onclick="getPagedData(@(pageCount))">
+                    <a href="javascript:;" aria-label="Next" onclick="getPagedData(@(pageCount))">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
@@ -76,20 +80,20 @@
                     </a>
                 </li>
                 <li class="disabled">
-                    <a aria-label="LastPage">
+                    <a aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
             }
-        </ul>
-    </nav>
-}
+        }
+    </ul>
+</nav>
 <script type="text/javascript">
-        function getPagedData(page) {
-            $('#page').val(page);
-            $('#searchForm').submit();
-        }
-        function refreshData() {
-            $('#searchForm').submit();
-        }
+    function getPagedData(page) {
+        $('#page').val(page);
+        $('#searchForm').submit();
+    }
+    function refreshData() {
+        $('#searchForm').submit();
+    }
 </script>
