--- a/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
         </div>
     </div>
 </div>
-<div id="mainContent" class="container body-content">
+<div id="mainContent" class="container-fluid body-content">
     @RenderBody()
     <footer id="mainFooter">
         <hr />
