--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
@@ -192,7 +192,7 @@
 }
 @if (totalCount > 0)
 {
-    <div id="dataTable" style="background-color:#fff">
+    <div id="dataTable" class="table-responsive ml0">
         <table class="table table-striped table-bordered table-hover">
             <tr>
                 <th class="hidden-print" width="24px">
@@ -466,6 +466,7 @@ else
     @Html.Partial("_IndexScriptsPartial", "PurchaseOrders")
     <script type="text/javascript">
         function downloadTable(opt) {
+            $('#busyAnima').show();
             $('#dataTable').width(1680);
             $('.hidden-print').hide(0);
             html2canvas($("#dataTable"), {
@@ -491,6 +492,7 @@ else
                     width: 'auto',
                     height: 'auto'
                 });
+                $('#busyAnima').fadeOut('250');
             }, 500);
         }
         function downloadTablePDF() {
@@ -569,6 +571,7 @@ else
                     $("#SupplierDueDateMin").datepicker("option", "maxDate", selectedDate);
                 }
             });
+            $('#busyAnima').hide();
         }());
         function clearFilter() {
             $('#OrderDateMin').val('');
