--- a/Source/CriticalPath.Web/Content/Site.css
+++ b/Source/CriticalPath.Web/Content/Site.css
@@ -60,8 +60,8 @@
 #headersForPrint {
     border: 1px solid #888;
     position: absolute;
-    margin-left:-2px;
-    top: 135px;
+    margin-left: -2px;
+    top: 150px;
     width: 200%;
     background-color: #fff;
     color: #000;
@@ -75,6 +75,40 @@
     color: #000;
     height: 48px;
     overflow: hidden;
+}
+
+.sizingsContainer {
+    width: 168px;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+.printing .sizingsContainer {
+    width: 252px;
+}
+
+@media screen and (min-width:1590px) {
+    .sizingsContainer {
+        width: 252px;
+    }
+}
+
+.sizingBox {
+    position: relative;
+    float: left;
+    width: 42px;
+    background-color: #000;
+    color: #fff;
+    padding: 1px;
+    margin: 1px 0 0 0;
+}
+
+.sizingBoxNumber {
+    background-color: #fff;
+    color: #000;
+    padding: 0 2px;
+    text-align: right;
+    height: 18px;
 }
 
 div.accordion .accordion-group .accordion-heading .accordion-toggle {
@@ -234,12 +268,12 @@ div.modal-body .form-horizontal {
 }
 
 .thumbInListWrapper {
-    max-height: 50px;
+    max-height: 60px;
     overflow: hidden;
 }
 
     .thumbInListWrapper img {
-        margin-top: -9px;
+        margin-top: 1px;
         width: 40px;
     }
 
