small fix on supplier select on PurchaseOrdersController

--- a/Source/CriticalPath.Web/Views/Shared/_PagerPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_PagerPartial.cshtml
@@ -15,7 +15,7 @@
         pagerStart = pageCount - pagers + 1;
     }
 }
-<nav>
+<nav class="hidden-print">
     <ul class="pagination">
         <li class="active">
             <span id="recordsStats" style="margin:0 0 0 2px;min-width:92px;text-align:center;">@listedCount / @totalCount</span>
